deploy/kubernetes/apps/immich/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: digitalocean-dns-letsencrypt-issuer
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "256"
spec:
  tls:
    - hosts:
        - immich.dev.homelab.mikemarti.ch
      secretName: tls-secret
  rules:
    - host: immich.dev.homelab.mikemarti.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 2283
